@@ -14,6 +14,8 @@ event_files = \
 	ia64/ia64/events ia64/ia64/unit_masks \
 	ia64/itanium2/events ia64/itanium2/unit_masks \
 	ia64/itanium/events ia64/itanium/unit_masks \
+	ppc64/power4/events ppc64/power4/event_mappings ppc64/power4/unit_masks \
+	ppc64/power5/events ppc64/power5/event_mappings ppc64/power5/unit_masks \
 	rtc/events rtc/unit_masks \
 	x86-64/hammer/events x86-64/hammer/unit_masks \
 	arm/xscale1/events arm/xscale1/unit_masks \
