@@ -910,6 +910,46 @@ set_ctr_param()
 }
 
 
+# If EVENT_STR has more than one token in it (i.e., the event ID), 
+# this implies some additional information is present that is associated 
+# with the event.  For example, for PPC64 architectures, the values
+# required to program the MMCRs for the given event are returned along 
+# with the event.  This function will perform any needed validation
+# of such event mapping data.
+check_event_mapping_data()
+{
+
+	if [ "$CPUTYPE" = "ppc64/power4" -o "$CPUTYPE" = "ppc64/power5" ]; then
+		MMCR0=`echo $EVENT_STR | awk '{print $2}'`
+		MMCR1=`echo $EVENT_STR | awk '{print $3}'`
+		MMCRA=`echo $EVENT_STR | awk '{print $4}'`
+		MMCR0_VAL=`echo $MMCR0 | awk -F: '{print $2}'`
+		MMCR1_VAL=`echo $MMCR1 | awk -F: '{print $2}'`
+		MMCRA_VAL=`echo $MMCRA | awk -F: '{print $2}'`
+	
+		## mmcr0, mmcr1, mmcra are for all ppc64 counters
+		# Save first event mmcr settings to compare with additional
+		# events.  All events must have the same mmcrx values i.e. be in
+		# the same group.  Only one event is assigned per counter,
+		# hence there will not be a conflict on the counters
+		if [ "$MMCR0_CK_VAL" = "" ] ; then    
+			let MMCR0_CK_VAL=$MMCR0_VAL
+			let MMCR1_CK_VAL=$MMCR1_VAL
+			let MMCRA_CK_VAL=$MMCRA_VAL
+		else
+			# make sure all events are from the same group 
+                        if test $MMCR0_CK_VAL != $MMCR0_VAL \
+                                -o $MMCR1_CK_VAL != $MMCR1_VAL \
+                                -o $MMCRA_CK_VAL != $MMCRA_VAL ; then
+				echo "ERROR: The specified events are not from the same group."
+				echo "       Use 'opcontrol --list-events' to see event groupings."
+				exit 1
+			fi
+		fi
+	fi
+}
+
+
 do_param_setup()
 {
 	# different names
@@ -965,7 +1005,11 @@ do_param_setup()
 	for f in `seq 0 $((NR_CHOSEN - 1))`; do
 		if test "${CHOSEN_EVENTS[$f]}" != ""; then
 			EVENT=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $1}'`
-			EVENT_VAL=`$OP_HELP $EVENT`
+			EVENT_STR=`$OP_HELP $EVENT`
+			# For some architectures, additional information associated with given
+			# event is returned in EVENT_STR, so we validate this information if necessary
+			check_event_mapping_data
+			EVENT_VAL=`echo $EVENT_STR | awk '{print $1}'`
 			COUNT=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $2}'`
 			UNIT_MASK=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $3}'`
 			KERNEL=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $4}'`
@@ -976,8 +1020,19 @@ do_param_setup()
 				set_param rtc_value $COUNT
 				$SYSCTL -w dev.oprofile.rtc_value=$COUNT
 			else
-				set_ctr_param $CTR enabled 1
+				set_ctr_param $CTR enabled 1				
 				set_ctr_param $CTR event $EVENT_VAL
+				let loop_count=1
+				for i in ${EVENT_STR}; do
+					#Skip first argument of EVENT_STR (event val) since we've already
+					#processed that value.
+					if test "$loop_count" -gt 1; then
+						KEY=`echo $i | awk -F: '{print $1}'`
+						VAL=`echo $i | awk -F: '{print $2}'`
+						set_ctr_param "" $KEY $VAL
+					fi
+					let loop_count="$loop_count"+1
+				done				
 				set_ctr_param $CTR count $COUNT
 				set_ctr_param $CTR kernel $KERNEL
 				set_ctr_param $CTR user $USER
